change in my skill

--- a/public/projects.json
+++ b/public/projects.json
@@ -1,23 +1,29 @@
 [
   {
     "id": "1",
-    "img": "https://i.ibb.co/7jCryNg/Doctors-portal.jpg",
-    "name": "Doctors Portal",
-    "technology": "React, Nodejs, Express, MongoDB, Firebase, JWT etc.",
-    "liveLink": "https://doctors-portal-254e6.web.app/"
-  },
-  {
-    "id": "2",
     "img": "https://i.ibb.co/SVxDYZq/Recycle-Clothes.jpg",
     "name": "Recycle Clothes",
     "technology": "React, Nodejs, Express, MongoDB, Firebase, JWT etc.",
-    "liveLink": "https://recycle-clothe.web.app/"
+    "liveLink": "https://recycle-clothe.web.app/",
+    "client": "https://github.com/MMamunurRashid/Used-Product-Resale",
+    "server": "https://github.com/MMamunurRashid/Used-Product-Resale-Server"
+  },
+  {
+    "id": "2",
+    "img": "https://i.ibb.co/7jCryNg/Doctors-portal.jpg",
+    "name": "Doctors Portal",
+    "technology": "React, Nodejs, Express, MongoDB, Firebase, JWT etc.",
+    "liveLink": "https://doctors-portal-254e6.web.app/",
+    "client": "https://github.com/MMamunurRashid/doctors-portal-client",
+    "server": "https://github.com/MMamunurRashid/doctors-portal-server"
   },
   {
     "id": "3",
-    "img": "https://i.ibb.co/Jj7MJrS/Smile-Photography.jpg",
+    "img": "https://i.ibb.co/C7GGYty/Smile-Photography.jpg",
     "name": "Smile Photography",
     "technology": "React, Nodejs, Express, MongoDB, Firebase, JWT etc.",
-    "liveLink": "https://smile-photography-df416.web.app/"
+    "liveLink": "https://smile-photography-df416.web.app/",
+    "client": "https://github.com/MMamunurRashid/Photograpy-Service",
+    "server": "https://github.com/MMamunurRashid/Photography-Service-Server"
   }
 ]
