--- a/public/projects.json
+++ b/public/projects.json
@@ -25,5 +25,57 @@
     "liveLink": "https://smile-photography-df416.web.app/",
     "client": "https://github.com/MMamunurRashid/Photograpy-Service",
     "server": "https://github.com/MMamunurRashid/Photography-Service-Server"
+  },
+  {
+    "id": "4",
+    "img": "https://i.ibb.co/pbW5CZ6/course-hero.jpg",
+    "name": "Course Hero",
+    "technology": "React, Nodejs, Express, Firebase, TailwindCSS etc.",
+    "liveLink": "https://course-hero-1.web.app/",
+    "client": "https://github.com/MMamunurRashid/Course-Hero",
+    "server": "https://github.com/MMamunurRashid/Course-Hero-Server"
+  },
+  {
+    "id": "5",
+    "img": "https://i.ibb.co/hfpjtLf/quick-quiz.jpg",
+    "name": "Quick Quiz",
+    "technology": "React, React Router DOM, TailwindCSS(Daisy UI) Netlify etc.",
+    "liveLink": "https://quick-quiz-1.netlify.app/",
+    "client": "https://github.com/MMamunurRashid/Quick-Quiz"
+  },
+  {
+    "id": "6",
+    "img": "https://i.ibb.co/PtxfyqB/ema-john.jpg",
+    "name": "Ema-John E-commerce",
+    "technology": "React, Node.js, Express.Js, MongoDB, TailwindCSS, Firebase etc.",
+    "liveLink": "https://ema-john-simple-492a4.web.app/",
+    "client": "https://github.com/MMamunurRashid/Ema-john-simple",
+    "server": "https://github.com/MMamunurRashid/ema-john-server"
+  },
+  {
+    "id": "7",
+    "img": "https://i.ibb.co/jbXQpgw/genius-car.jpg",
+    "name": "Genius Car - Car Service Center",
+    "technology": "React, Node.js, Express.Js, MongoDB, TailwindCSS, Firebase etc.",
+    "liveLink": "https://genius-car-850d5.web.app/",
+    "client": "https://github.com/MMamunurRashid/genius-car-client",
+    "server": "https://github.com/MMamunurRashid/genius-car-server"
+  },
+  {
+    "id": "8",
+    "img": "https://i.ibb.co/ns7F9HX/dragon-news.jpg",
+    "name": "Dragon New - News Portal",
+    "technology": "React, Node.js, Express.Js, MongoDB, TailwindCSS, Firebase etc.",
+    "liveLink": "https://dragon-news-c4e45.web.app/",
+    "client": "https://github.com/MMamunurRashid/dragon-news-client",
+    "server": "https://github.com/MMamunurRashid/dragon-news-server"
+  },
+  {
+    "id": "9",
+    "img": "https://i.ibb.co/1bq7Gqs/daily-activites.jpg",
+    "name": "Daily Activities",
+    "technology": "React, React Router DOM, TailwindCSS(Daisy UI), Netlify etc.",
+    "liveLink": "https://dailyactv.netlify.app/",
+    "client": "https://github.com/MMamunurRashid/Daily-Activities"
   }
 ]
