--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
+    "react-type-animation": "^2.1.2",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
